* always create a temp for MacPas objects in with-expressions (mantis     #13210)
git-svn-id: trunk@12753 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8761,6 +8761,7 @@ tests/webtbs/tw1310.pp svneol=native#text/plain
 tests/webtbs/tw13133.pp svneol=native#text/plain
 tests/webtbs/tw1318.pp svneol=native#text/plain
 tests/webtbs/tw13187.pp svneol=native#text/plain
+tests/webtbs/tw13210.pp svneol=native#text/plain
 tests/webtbs/tw1323.pp svneol=native#text/plain
 tests/webtbs/tw1327.pp svneol=native#text/plain
 tests/webtbs/tw1331.pp svneol=native#text/plain
