--- a/.gitattributes
+++ b/.gitattributes
@@ -7696,6 +7696,7 @@ tests/test/packages/fcl-db/tdb2.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb3.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb4.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb5.pp svneol=native#text/plain
+tests/test/packages/fcl-db/tdb6.pp svneol=native#text/plain
 tests/test/packages/fcl-db/toolsunit.pas svneol=native#text/plain
 tests/test/packages/fcl-registry/tregistry1.pp svneol=native#text/plain
 tests/test/packages/fcl-xml/thtmlwriter.pp svneol=native#text/plain
