+ added support for streaming basic variant types (boolean, integer types,     floating point types, currency and string types), based on description     by Anton Kavalenka at     http://wiki.freepascal.org/FPC_Cleanroom#Variant_streaming_implementation     and based on his test program (mantis #10482)
git-svn-id: trunk@12781 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8607,6 +8607,7 @@ tests/webtbs/tw10425.pp svneol=native#text/plain
 tests/webtbs/tw1044.pp svneol=native#text/plain
 tests/webtbs/tw10454.pp svneol=native#text/plain
 tests/webtbs/tw1046.pp svneol=native#text/plain
+tests/webtbs/tw10482.pp svneol=native#text/plain
 tests/webtbs/tw10489.pp svneol=native#text/plain
 tests/webtbs/tw10492.pp svneol=native#text/plain
 tests/webtbs/tw10493.pp svneol=native#text/plain
