+ Added extapi and imm wince api units by Vasil Maximov. * Updated some existing wince api units by Vasil Maximov.
git-svn-id: trunk@12839 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4684,9 +4684,11 @@ packages/winceunits/src/connmgr.pp svneol=native#text/plain
 packages/winceunits/src/cpl.pp svneol=native#text/plain
 packages/winceunits/src/devload.pp svneol=native#text/plain
 packages/winceunits/src/devmgmt.pp svneol=native#text/plain
+packages/winceunits/src/extapi.pp svneol=native#text/plain
 packages/winceunits/src/gpsapi.pp svneol=native#text/plain
 packages/winceunits/src/gx.pp svneol=native#text/plain
 packages/winceunits/src/htmlctrl.pp svneol=native#text/plain
+packages/winceunits/src/imm.pp svneol=native#text/plain
 packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
 packages/winceunits/src/keybd.pp svneol=native#text/plain
 packages/winceunits/src/mmreg.pp svneol=native#text/plain
