+ added {$modeswitch objectivec1}/-Mobjectivec1 mode switch to enable     the use of Objective-C 1.0 constructs. Because it is a mode switch, it     can be used cumulatively with every syntax mode. Note that a {$mode xxx}     statement resets all mode switches as well, so you cannot use the     -Mobjectivec1 variant if you have such a statement in a unit. This     modeswitch is currently only enabled for Darwin/PowerPC and Darwin/i386,     as the backend support is not yet implemented for other platforms.   + implemented selector() statement that can be used to create an Objective-C     selector for the message with the specified *constant* name (in the future,     it will also work for Objective-C method identifiers)   + added SEL type to the system unit (the selector() statement returns it)   + added all Objective-C segments to the assembler writers   + (currently mostly dummy) objc1 unit that is automatically included if the     {$modeswitch objectivec1} statement is used   + some tests for the selector() statement
git-svn-id: trunk@12870 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -286,6 +286,7 @@ compiler/ncginl.pas svneol=native#text/plain
 compiler/ncgld.pas svneol=native#text/plain
 compiler/ncgmat.pas svneol=native#text/plain
 compiler/ncgmem.pas svneol=native#text/plain
+compiler/ncgobjc.pas svneol=native#text/plain
 compiler/ncgopt.pas svneol=native#text/plain
 compiler/ncgrtti.pas svneol=native#text/plain
 compiler/ncgset.pas svneol=native#text/plain
@@ -298,6 +299,7 @@ compiler/nld.pas svneol=native#text/plain
 compiler/nmat.pas svneol=native#text/plain
 compiler/nmem.pas svneol=native#text/plain
 compiler/nobj.pas svneol=native#text/plain
+compiler/nobjc.pas svneol=native#text/plain
 compiler/node.pas svneol=native#text/plain
 compiler/nopt.pas svneol=native#text/plain
 compiler/nset.pas svneol=native#text/plain
@@ -5459,6 +5461,8 @@ rtl/inc/mmatimp.inc svneol=native#text/plain
 rtl/inc/mouse.inc svneol=native#text/plain
 rtl/inc/mouseh.inc svneol=native#text/plain
 rtl/inc/mvecimp.inc svneol=native#text/plain
+rtl/inc/objc1.pp svneol=native#text/plain
+rtl/inc/objc1h.inc svneol=native#text/plain
 rtl/inc/objects.pp svneol=native#text/plain
 rtl/inc/objpas.inc svneol=native#text/plain
 rtl/inc/objpash.inc svneol=native#text/plain
@@ -7975,6 +7979,8 @@ tests/test/trtti2.pp svneol=native#text/plain
 tests/test/trtti3.pp svneol=native#text/plain
 tests/test/trtti4.pp svneol=native#text/plain
 tests/test/trtti5.pp svneol=native#text/plain
+tests/test/tsel1.pp svneol=native#text/plain
+tests/test/tsel2.pp svneol=native#text/plain
 tests/test/tset1.pp svneol=native#text/plain
 tests/test/tset2.pp svneol=native#text/plain
 tests/test/tset2a.pp svneol=native#text/plain
