--- a/.gitattributes
+++ b/.gitattributes
@@ -7727,6 +7727,11 @@ tests/test/packages/zlib/tzlib1.pp svneol=native#text/plain
 tests/test/t4cc1.pp svneol=native#text/plain
 tests/test/t4cc2.pp svneol=native#text/plain
 tests/test/tabstrcl.pp svneol=native#text/plain
+tests/test/tabsvr1.pp svneol=native#text/plain
+tests/test/tabsvr2.pp svneol=native#text/plain
+tests/test/tabsvr3.pp svneol=native#text/plain
+tests/test/tabsvr4.pp svneol=native#text/plain
+tests/test/tabsvr5.pp svneol=native#text/plain
 tests/test/taddstr1.pp svneol=native#text/plain
 tests/test/talign.pp svneol=native#text/plain
 tests/test/talign1.pp svneol=native#text/plain
