* fixed UTF8ToUnicode() based on patch by JoshyFun, and also added     support for 4-character UTF-8 codepoints (mantis #11791)   * fixed UnicodeToUtf8() based on patch by A. J. Miller (mantis     #13075)
git-svn-id: trunk@12902 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8726,6 +8726,7 @@ tests/webtbs/tw11711.pp svneol=native#text/plain
 tests/webtbs/tw11762.pp svneol=native#text/plain
 tests/webtbs/tw11763.pp svneol=native#text/plain
 tests/webtbs/tw11786.pp svneol=native#text/plain
+tests/webtbs/tw11791.pp svneol=native#text/plain
 tests/webtbs/tw1181.pp svneol=native#text/plain
 tests/webtbs/tw11825.pp svneol=native#text/plain
 tests/webtbs/tw11846a.pp svneol=native#text/plain
@@ -8788,6 +8789,7 @@ tests/webtbs/tw1299.pp svneol=native#text/plain
 tests/webtbs/tw12993.pp svneol=native#text/plain
 tests/webtbs/tw13015.pp svneol=native#text/plain
 tests/webtbs/tw13019.pp svneol=native#text/plain
+tests/webtbs/tw13075.pp svneol=native#text/plain
 tests/webtbs/tw1310.pp svneol=native#text/plain
 tests/webtbs/tw13133.pp svneol=native#text/plain
 tests/webtbs/tw1318.pp svneol=native#text/plain
