* always initialize/finalize global refcounted variables in units, also     when they are not used in the unit where they are defined (since they     may be used elsewhere, discovered while analyzing mantis #13345)
git-svn-id: trunk@12954 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8804,6 +8804,8 @@ tests/webtbs/tw13313.pp svneol=native#text/plain
 tests/webtbs/tw13313a.pp svneol=native#text/plain
 tests/webtbs/tw1333.pp svneol=native#text/plain
 tests/webtbs/tw13343.pp svneol=native#text/plain
+tests/webtbs/tw13345x.pp svneol=native#text/plain
+tests/webtbs/tw13345y.pp svneol=native#text/plain
 tests/webtbs/tw1348.pp svneol=native#text/plain
 tests/webtbs/tw1351.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
