* renamed tw13345y.pp to uw13345y because it's a unit (otherwise its     object file is not available for linking when tw13345x is recompiled)
git-svn-id: trunk@12959 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8809,7 +8809,6 @@ tests/webtbs/tw13318.pp svneol=native#text/plain
 tests/webtbs/tw1333.pp svneol=native#text/plain
 tests/webtbs/tw13343.pp svneol=native#text/plain
 tests/webtbs/tw13345x.pp svneol=native#text/plain
-tests/webtbs/tw13345y.pp svneol=native#text/plain
 tests/webtbs/tw1348.pp svneol=native#text/plain
 tests/webtbs/tw1351.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
@@ -9699,6 +9698,7 @@ tests/webtbs/uw1181.inc svneol=native#text/plain
 tests/webtbs/uw1279.pp svneol=native#text/plain
 tests/webtbs/uw13015.pp svneol=native#text/plain
 tests/webtbs/uw1331.pp svneol=native#text/plain
+tests/webtbs/uw13345y.pp svneol=native#text/plain
 tests/webtbs/uw2004.inc svneol=native#text/plain
 tests/webtbs/uw2040.pp svneol=native#text/plain
 tests/webtbs/uw2266a.inc svneol=native#text/plain
