* give an error when the typeinfo() function is called for an enumeration     whose base is not 0, or that has jumps in its value range (manits #9551)
git-svn-id: trunk@12960 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8508,6 +8508,8 @@ tests/webtbf/tw9522b.pp svneol=native#text/plain
 tests/webtbf/tw9522c.pp svneol=native#text/plain
 tests/webtbf/tw9522d.pp svneol=native#text/plain
 tests/webtbf/tw9522e.pp svneol=native#text/plain
+tests/webtbf/tw9551.pp svneol=native#text/plain
+tests/webtbf/tw9551b.pp svneol=native#text/plain
 tests/webtbf/tw9579a.pp svneol=native#text/plain
 tests/webtbf/tw9579b.pp svneol=native#text/plain
 tests/webtbf/tw9894b.pp svneol=native#text/plain
@@ -9669,6 +9671,7 @@ tests/webtbs/tw9450.pp svneol=native#text/plain
 tests/webtbs/tw9450a.pp svneol=native#text/plain
 tests/webtbs/tw9461.pp svneol=native#text/plain
 tests/webtbs/tw9509.pp svneol=native#text/plain
+tests/webtbs/tw9551a.pp svneol=native#text/plain
 tests/webtbs/tw9601.pp svneol=native#text/plain
 tests/webtbs/tw9667.pp svneol=native#text/plain
 tests/webtbs/tw9672.pp svneol=native#text/plain
