* Patch from Sergei Gorelkin:   + added TXPathBinaryNode as a common ancestor for binary operations;   + TXPathBooleanOpNode now handles only 'and' and 'or' operators,     the purpose is to not evaluate the second argument if the result can     be determined by the first argument;   * Comparison operations moved to TXPathCompareNode and fixed     to support INFs and NANs correctly;   * Fixed TranslateWideString() that was not deleting characters;   * Fixed 'substring-after' function so its result is empty when argument     string does not contain the pattern;   * Fixed 'round' funcion so it complies to the specs;   * Completed implementation of 'substring' function (but surrogate pairs     are not handled yet);   * Mask exInvalidOp and exZeroDivide FPU exceptions while evaluating     expressions, this ensures correct calculations with respect to INFs     and NANs.   + Added testsuite for xpath
git-svn-id: trunk@12961 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1681,6 +1681,7 @@ packages/fcl-xml/tests/domunit.pp svneol=native#text/plain
 packages/fcl-xml/tests/template.xml svneol=native#text/plain
 packages/fcl-xml/tests/testgen.pp svneol=native#text/plain
 packages/fcl-xml/tests/xmlts.pp svneol=native#text/plain
+packages/fcl-xml/tests/xpathts.pp svneol=native#text/plain
 packages/fftw/Makefile svneol=native#text/plain
 packages/fftw/Makefile.fpc svneol=native#text/plain
 packages/fftw/examples/example.pas svneol=native#text/plain
