* give an error when trying to use the offset of a non-byte-aligned field     of a bitpacked record in assembler code   * convert the offsets of byte-aligned fields of bitpacked records from bits     to bytes (mantis #13563)
git-svn-id: trunk@13027 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8291,6 +8291,7 @@ tests/webtbf/tw12933.pp svneol=native#text/plain
 tests/webtbf/tw1306.pp svneol=native#text/plain
 tests/webtbf/tw1316.pp svneol=native#text/plain
 tests/webtbf/tw1328.pp svneol=native#text/plain
+tests/webtbf/tw13563a.pp svneol=native#text/plain
 tests/webtbf/tw1365.pp svneol=native#text/plain
 tests/webtbf/tw1395.pp svneol=native#text/plain
 tests/webtbf/tw1407.pp svneol=native#text/plain
@@ -8823,6 +8824,7 @@ tests/webtbs/tw1348.pp svneol=native#text/plain
 tests/webtbs/tw1351.pp svneol=native#text/plain
 tests/webtbs/tw13536.pp svneol=native#text/plain
 tests/webtbs/tw13553.pp svneol=native#text/plain
+tests/webtbs/tw13563.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
