--- a/.gitattributes
+++ b/.gitattributes
@@ -8823,6 +8823,7 @@ tests/webtbs/tw13456.pp svneol=native#text/plain
 tests/webtbs/tw1348.pp svneol=native#text/plain
 tests/webtbs/tw1351.pp svneol=native#text/plain
 tests/webtbs/tw13536.pp svneol=native#text/plain
+tests/webtbs/tw13552.pp svneol=native#text/plain
 tests/webtbs/tw13553.pp svneol=native#text/plain
 tests/webtbs/tw13563.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
