--- a/.gitattributes
+++ b/.gitattributes
@@ -8826,6 +8826,7 @@ tests/webtbs/tw13536.pp svneol=native#text/plain
 tests/webtbs/tw13552.pp svneol=native#text/plain
 tests/webtbs/tw13553.pp svneol=native#text/plain
 tests/webtbs/tw13563.pp svneol=native#text/plain
+tests/webtbs/tw13583.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
@@ -9715,6 +9716,7 @@ tests/webtbs/uw1279.pp svneol=native#text/plain
 tests/webtbs/uw13015.pp svneol=native#text/plain
 tests/webtbs/uw1331.pp svneol=native#text/plain
 tests/webtbs/uw13345y.pp svneol=native#text/plain
+tests/webtbs/uw13583.pp svneol=native#text/plain
 tests/webtbs/uw2004.inc svneol=native#text/plain
 tests/webtbs/uw2040.pp svneol=native#text/plain
 tests/webtbs/uw2266a.inc svneol=native#text/plain
