--- a/.gitattributes
+++ b/.gitattributes
@@ -2770,6 +2770,8 @@ packages/iconvenc/examples/Makefile.fpc svneol=native#text/plain
 packages/iconvenc/examples/iconvtest.pp svneol=native#text/plain
 packages/iconvenc/fpmake.pp svneol=native#text/plain
 packages/iconvenc/src/iconvenc.pas svneol=native#text/plain
+packages/iconvenc/src/iconvenc_dyn.pas svneol=native#text/plain
+packages/iconvenc/src/iconvert.inc svneol=native#text/plain
 packages/imagemagick/Makefile svneol=native#text/plain
 packages/imagemagick/Makefile.fpc svneol=native#text/plain
 packages/imagemagick/examples/image.png -text svneol=unset#image/png
