* do not initialize global reference-counted variables in the automatic     initialization code of units/programs, because they are already     zero and initializing them explicitly is Delphi-incompatible     (mantis #13345)
git-svn-id: trunk@13042 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8821,6 +8821,7 @@ tests/webtbs/tw13313a.pp svneol=native#text/plain
 tests/webtbs/tw13318.pp svneol=native#text/plain
 tests/webtbs/tw1333.pp svneol=native#text/plain
 tests/webtbs/tw13343.pp svneol=native#text/plain
+tests/webtbs/tw13345.pp svneol=native#text/plain
 tests/webtbs/tw13345x.pp svneol=native#text/plain
 tests/webtbs/tw13456.pp svneol=native#text/plain
 tests/webtbs/tw1348.pp svneol=native#text/plain
@@ -9719,6 +9720,8 @@ tests/webtbs/uw1181.inc svneol=native#text/plain
 tests/webtbs/uw1279.pp svneol=native#text/plain
 tests/webtbs/uw13015.pp svneol=native#text/plain
 tests/webtbs/uw1331.pp svneol=native#text/plain
+tests/webtbs/uw13345b.pp svneol=native#text/plain
+tests/webtbs/uw13345c.pp svneol=native#text/plain
 tests/webtbs/uw13345y.pp svneol=native#text/plain
 tests/webtbs/uw13583.pp svneol=native#text/plain
 tests/webtbs/uw2004.inc svneol=native#text/plain
