* allow exlicit type conversions from class/interface to enums in Delphi     mode (mantis #11859)   * cleaned up some superfluous "eq=te_incompatible" checks (probably from     copy/pasting conditions from elsewhere)
git-svn-id: trunk@13050 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8746,6 +8746,7 @@ tests/webtbs/tw11846b.pp svneol=native#text/plain
 tests/webtbs/tw11848.pp svneol=native#text/plain
 tests/webtbs/tw11849.pp svneol=native#text/plain
 tests/webtbs/tw11852.pp svneol=native#text/plain
+tests/webtbs/tw11859.pp svneol=native#text/plain
 tests/webtbs/tw11861.pp svneol=native#text/plain
 tests/webtbs/tw11862.pp svneol=native#text/plain
 tests/webtbs/tw11896.pp svneol=native#text/plain
