* store/restore taddnode.resultrealdef to/from the ppufiles, and also     copy/compare it when copying/comparing taddnodes (necessary for inlined     procedures, mantis #13596)
git-svn-id: trunk@13054 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8833,6 +8833,8 @@ tests/webtbs/tw13552.pp svneol=native#text/plain
 tests/webtbs/tw13553.pp svneol=native#text/plain
 tests/webtbs/tw13563.pp svneol=native#text/plain
 tests/webtbs/tw13583.pp svneol=native#text/plain
+tests/webtbs/tw13596.pp svneol=native#text/plain
+tests/webtbs/tw13596a.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
