+ darwin/x86_64 test object files
git-svn-id: trunk@13067 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7307,6 +7307,10 @@ tests/test/cg/obj/darwin/powerpc64/ctest.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext3.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext4.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext5.o -text
+tests/test/cg/obj/darwin/x86_64/ctest.o -text
+tests/test/cg/obj/darwin/x86_64/tcext3.o -text
+tests/test/cg/obj/darwin/x86_64/tcext4.o -text
+tests/test/cg/obj/darwin/x86_64/tcext5.o -text
 tests/test/cg/obj/freebsd/i386/ctest.o -text
 tests/test/cg/obj/freebsd/i386/tcext3.o -text
 tests/test/cg/obj/freebsd/i386/tcext4.o -text
