--- a/.gitattributes
+++ b/.gitattributes
@@ -8840,6 +8840,8 @@ tests/webtbs/tw13583.pp svneol=native#text/plain
 tests/webtbs/tw13596.pp svneol=native#text/plain
 tests/webtbs/tw13596a.pp svneol=native#text/plain
 tests/webtbs/tw13622.pp svneol=native#text/plain
+tests/webtbs/tw13628a.pp svneol=native#text/plain
+tests/webtbs/tw13628b.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
