* remove the RTL's installed signal handlers at the end of the system     unit's initialization code in case we're in a library   + implemented InquireSignal(), AbandonSignalHandler(), HookSignal() and     UnhookSignal() in the sysutils unit   * for Kylix compatibility, these routines support operating on     SIGINT and SIGQUIT as well, although they are not hooked by default     by FPC. The run time errors/exception codes for these signals are     resp. 217 and 233 (same as in Kylix; I changed ENoWideStringSupport     to 234).   * changed the BSD syscall version of fpsigaction to use pointer     rather than "var" arguments (compatible with other targets, and     required to be able to pass nil arguments inside the system unit)   -> together fixes mantis #12704
git-svn-id: trunk@13077 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8795,6 +8795,8 @@ tests/webtbs/tw12597.pp svneol=native#text/plain
 tests/webtbs/tw12614.pp svneol=native#text/plain
 tests/webtbs/tw12685.pp svneol=native#text/plain
 tests/webtbs/tw1269.pp svneol=native#text/plain
+tests/webtbs/tw12704a.pp svneol=native#text/plain
+tests/webtbs/tw12704b.pp svneol=native#text/plain
 tests/webtbs/tw1275.pp svneol=native#text/plain
 tests/webtbs/tw12756.pp svneol=native#text/plain
 tests/webtbs/tw12788.pp svneol=native#text/plain
