* only allow implicit type conversions from dynamic arrays to voidpointer     in Delphi mode, rather than to any pointer type (confused overload     selection in mantis #13639)
git-svn-id: trunk@13079 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8845,6 +8845,7 @@ tests/webtbs/tw13596a.pp svneol=native#text/plain
 tests/webtbs/tw13622.pp svneol=native#text/plain
 tests/webtbs/tw13628a.pp svneol=native#text/plain
 tests/webtbs/tw13628b.pp svneol=native#text/plain
+tests/webtbs/tw13639.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
