--- a/.gitattributes
+++ b/.gitattributes
@@ -8842,6 +8842,7 @@ tests/webtbs/tw13563.pp svneol=native#text/plain
 tests/webtbs/tw13583.pp svneol=native#text/plain
 tests/webtbs/tw13596.pp svneol=native#text/plain
 tests/webtbs/tw13596a.pp svneol=native#text/plain
+tests/webtbs/tw13619.pp svneol=native#text/plain
 tests/webtbs/tw13622.pp svneol=native#text/plain
 tests/webtbs/tw13628a.pp svneol=native#text/plain
 tests/webtbs/tw13628b.pp svneol=native#text/plain
