* insert register allocation/deallocation information for the exception     handling code (g_exception_reason_load() now automatically allocates     the cpu register that it loads). This fixes the bug reported in     http://lists.freepascal.org/lists/fpc-devel/2009-May/016773.html     on i386 with -O2)
git-svn-id: trunk@13105 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7243,6 +7243,7 @@ tests/tbs/tb0556.pp svneol=native#text/plain
 tests/tbs/tb0557.pp svneol=native#text/plain
 tests/tbs/tb0558.pp svneol=native#text/plain
 tests/tbs/tb0559.pp svneol=native#text/plain
+tests/tbs/tb0560.pp svneol=native#text/plain
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
