+ objcrtl package by Dmitry Boyarintsev: interface for the Mac OS X     Objective-C run time 1.0 and 2.0, for 32 bit platforms
git-svn-id: trunk@13122 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3636,6 +3636,17 @@ packages/numlib/tests/test.bat svneol=native#text/plain
 packages/numlib/tests/test.pas svneol=native#text/plain
 packages/numlib/tests/timer.pas svneol=native#text/plain
 packages/numlib/tests/turte.pas svneol=native#text/plain
+packages/objcrtl/Makefile svneol=native#text/plain
+packages/objcrtl/Makefile.fpc svneol=native#text/plain
+packages/objcrtl/Package.fpc svneol=native#text/plain
+packages/objcrtl/examples/objcrtltest.pas svneol=native#text/plain
+packages/objcrtl/fpmake.pp svneol=native#text/plain
+packages/objcrtl/src/objcrtl.pas svneol=native#text/plain
+packages/objcrtl/src/objcrtl10.pas svneol=native#text/plain
+packages/objcrtl/src/objcrtl20.pas svneol=native#text/plain
+packages/objcrtl/src/objcrtliphoneos.pas svneol=native#text/plain
+packages/objcrtl/src/objcrtlmacosx.pas svneol=native#text/plain
+packages/objcrtl/src/objcrtlutils.pas svneol=native#text/plain
 packages/odbc/Makefile svneol=native#text/plain
 packages/odbc/Makefile.fpc svneol=native#text/plain
 packages/odbc/README.txt svneol=native#text/plain
