+ test conversion from class to differently sized enum and to differently     sized integer (succeed for Delphi, fail for objfpc)   * fixed compiler so it only allows typecasting a class/interface to a     differently sized integer in Delphi mode
git-svn-id: trunk@13152 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6688,7 +6688,9 @@ tests/tbf/tb0207.pp svneol=native#text/plain
 tests/tbf/tb0208.pp svneol=native#text/plain
 tests/tbf/tb0209.pp svneol=native#text/plain
 tests/tbf/tb0210.pp svneol=native#text/plain
+tests/tbf/tb0210a.pp svneol=native#text/plain
 tests/tbf/tb0211.pp svneol=native#text/plain
+tests/tbf/tb0211a.pp svneol=native#text/plain
 tests/tbf/tb0212.pp svneol=native#text/plain
 tests/tbf/tb0213.pp svneol=native#text/plain
 tests/tbf/tb0214.pp svneol=native#text/plain
