* initial Objective-C 1.0 support:     o support for declaring external Objective-C classes (see       rtl/inc/objcbase.pas), including derived classes     o support for converting methods of objcclasses into selectors       (see tests/test/tobjc1.pp)     o support for loading from/storing to fields of objcclasses     o support for calling Objective-C methods using regular       Object Pascal syntax (see tests/test/tobjc1.pp)     o some things that are known to be not yet working:       o automatic conversion from ID to objcclasses and back       o declaring and implementing new objcclasses/methods in Pascal code       o debug information (objcclasses are currently plain pointers         as far as the debugger knows)
git-svn-id: branches/objc@13162 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -304,6 +304,8 @@ compiler/nopt.pas svneol=native#text/plain
 compiler/nset.pas svneol=native#text/plain
 compiler/nstate.pas svneol=native#text/plain
 compiler/nutils.pas svneol=native#text/plain
+compiler/objcgutl.pas svneol=native#text/plain
+compiler/objcutil.pas svneol=native#text/plain
 compiler/ogbase.pas svneol=native#text/plain
 compiler/ogcoff.pas svneol=native#text/plain
 compiler/ogelf.pas svneol=native#text/plain
@@ -5479,7 +5481,7 @@ rtl/inc/mouse.inc svneol=native#text/plain
 rtl/inc/mouseh.inc svneol=native#text/plain
 rtl/inc/mvecimp.inc svneol=native#text/plain
 rtl/inc/objc1.pp svneol=native#text/plain
-rtl/inc/objc1h.inc svneol=native#text/plain
+rtl/inc/objcbase.pp svneol=native#text/plain
 rtl/inc/objects.pp svneol=native#text/plain
 rtl/inc/objpas.inc svneol=native#text/plain
 rtl/inc/objpash.inc svneol=native#text/plain
@@ -7913,6 +7915,7 @@ tests/test/tmsg2.pp svneol=native#text/plain
 tests/test/tmsg3.pp svneol=native#text/plain
 tests/test/tmsg4.pp svneol=native#text/plain
 tests/test/tmt1.pp svneol=native#text/plain
+tests/test/tobjc1.pp svneol=native#text/plain
 tests/test/tobject1.pp svneol=native#text/plain
 tests/test/tobject2.pp svneol=native#text/plain
 tests/test/tobject3.pp svneol=native#text/plain
