* support {$i *.ext} to include source files with the same base name, but     with a different extension than the current source file (mantis #13696)
git-svn-id: trunk@13163 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8866,6 +8866,8 @@ tests/webtbs/tw13628b.pp svneol=native#text/plain
 tests/webtbs/tw13639.pp svneol=native#text/plain
 tests/webtbs/tw1364.pp svneol=native#text/plain
 tests/webtbs/tw1365.pp svneol=native#text/plain
+tests/webtbs/tw13696.inc svneol=native#text/plain
+tests/webtbs/tw13696.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
 tests/webtbs/tw1375.pp svneol=native#text/plain
 tests/webtbs/tw1376.pp svneol=native#text/plain
