- unconditionally enabled {$ifdef PARAOUTFILE}-code (that define was     decomissioned quite a while ago, but this file was forgotten in     that process)
git-svn-id: trunk@13181 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8871,6 +8871,7 @@ tests/webtbs/tw13696.pp svneol=native#text/plain
 tests/webtbs/tw1374.pp svneol=native#text/plain
 tests/webtbs/tw1375.pp svneol=native#text/plain
 tests/webtbs/tw1376.pp svneol=native#text/plain
+tests/webtbs/tw13763.pp svneol=native#text/plain
 tests/webtbs/tw1398.pp svneol=native#text/plain
 tests/webtbs/tw1401.pp svneol=native#text/plain
 tests/webtbs/tw1407.pp svneol=native#text/plain
